ports: add used ports api route.
