# api/docs/swagger/swagger.json
@@ -48,6 +48,68 @@
                 }
             }
         },
+        "/api/info/images/available": {
+            "get": {
+                "description": "Returns all the available base images  which can be used for challenge creation as the base OS for challenge.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "info"
+                ],
+                "summary": "Gives all the base images that can be used while creating a beast challenge, this is a constant specified in beast global config",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.AvailableImagesResp"
+                        }
+                    },
+                    "402": {
+                        "description": "Payment Required",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.AvailableImagesResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/info/ports/used": {
+            "get": {
+                "description": "Returns the ports in use by beast, which cannot be used in creating a new challenge..",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "info"
+                ],
+                "summary": "Returns ports in use by beast by looking in the hack git repository, also returns min and max value of port allowed while specifying in beast challenge config.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.PortsInUseResp"
+                        }
+                    },
+                    "402": {
+                        "description": "Payment Required",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.PortsInUseResp"
+                        }
+                    }
+                }
+            }
+        },
         "/api/manage/all/": {
             "post": {
                 "description": "Handles challenge management routes for all the challenges with actions which includes - DEPLOY, UNDEPLOY.",
@@ -334,6 +396,25 @@
                 }
             }
         },
+        "api.AvailableImagesResp": {
+            "type": "object",
+            "properties": {
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "['ubuntu16.04'",
+                        " 'ubuntu18.04']"
+                    ]
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Available Base images."
+                }
+            }
+        },
         "api.HTTPAuthorizeResp": {
             "type": "object",
             "properties": {
@@ -353,6 +434,31 @@
                 "message": {
                     "type": "string",
                     "example": "Messsage in response to your request"
+                }
+            }
+        },
+        "api.PortsInUseResp": {
+            "type": "object",
+            "properties": {
+                "port_max_value": {
+                    "type": "integer",
+                    "example": 20000
+                },
+                "port_min_value": {
+                    "type": "integer",
+                    "example": 10000
+                },
+                "ports_in_use": {
+                    "type": "array",
+                    "items": {
+                        "type": "uint32"
+                    },
+                    "example": [
+                        "[10000",
+                        " 100001",
+                        " 100003",
+                        " 10010]"
+                    ]
                 }
             }
         }
